Javadoc til Model filerne